# physicsim

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.txt  README.md  buildTest.sh
include/physicsim/: collisions.hpp  constants.hpp  matrix.hpp  physicsim.hpp  render.hpp  rigidbody.hpp  vector.hpp  vector2.hpp  world.hpp
src/: collisions.cpp  matrix.cpp  physicsim.cpp  render.cpp  rigidbody.cpp  vector.cpp  vector2.cpp  world.cpp
tests/: CMakeLists.txt  test1.cpp  testCircleRectCollision.cpp  testFoo.cpp  testMatrix.cpp  testSim.cpp
